ge(collect): re-scan for coins after item click + force PER_SLOT on retry in detail view
GE CS2 can render the item child before the coins child on the same tick;
runCollectFromDetail now does a second findCollectButtons() pass after the
first-pass clicks and picks up any button whose itemId wasn't already
clicked.  Prevents coins being left behind when collectOpen() is true but
the coins widget was still hidden on entry.

CollectOfferStep.dispatchStrategy() now forces PER_SLOT whenever the
per-slot detail view is already open (collectOpen=true).  COLLECT_ALL
clicks the main-grid toolbar button which is hidden inside the detail
view, so rolling into it on retry was always a silent no-op that left the
slot stuck until timeout.

login(v2): Jagex account support — AWAIT_JAGEX_LOGIN state, isJagex flag
threaded through LoginContextV2 / AccountPrefs / RecorderPanel UI
(checkbox on add/edit, [J] prefix on account list, sentinel password so
Keychain write succeeds without a real password).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>